updated with master (#1080)
* fix: upgrade org.ojalgo:ojalgo from 53.1.0 to 53.1.1 (#837)

Snyk has created this PR to upgrade org.ojalgo:ojalgo from 53.1.0 to 53.1.1.

See this package in Maven Repository:
https://mvnrepository.com/artifact/org.ojalgo/ojalgo/

See this project in Snyk:
https://app.snyk.io/org/evensol/project/5734e76a-5ebe-4fe0-9fb9-776e0cbc8504?utm_source=github&utm_medium=referral&page=upgrade-pr

Co-authored-by: snyk-bot <snyk-bot@snyk.io>

* added flow setter (#838)

* added flow setter

* improve setter

* fix bug

* fix errors

* fix: upgrade org.apache.logging.log4j:log4j-core from 2.20.0 to 2.21.0 (#840)

Snyk has created this PR to upgrade org.apache.logging.log4j:log4j-core from 2.20.0 to 2.21.0.

See this package in Maven Repository:
https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core/

See this project in Snyk:
https://app.snyk.io/org/evensol/project/5734e76a-5ebe-4fe0-9fb9-776e0cbc8504?utm_source=github&utm_medium=referral&page=upgrade-pr

Co-authored-by: snyk-bot <snyk-bot@snyk.io>

* fix: upgrade org.apache.logging.log4j:log4j-api from 2.20.0 to 2.21.0 (#839)

Snyk has created this PR to upgrade org.apache.logging.log4j:log4j-api from 2.20.0 to 2.21.0.

See this package in Maven Repository:
https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api/

See this project in Snyk:
https://app.snyk.io/org/evensol/project/5734e76a-5ebe-4fe0-9fb9-776e0cbc8504?utm_source=github&utm_medium=referral&page=upgrade-pr

Co-authored-by: snyk-bot <snyk-bot@snyk.io>

* added test for flow setter for simple process (#841)

* Bug  error with flash calc (#843)

* bug: error with flash calc Gudrun

* temporary "fix" bug in stabiilty analysis

---------

Co-authored-by: Sviatoslav Eroshkin <109044598+Sviatose@users.noreply.github.com>

* Fix multifeed (#845)

* fixed minor bug in stability analysis

* fix multifeed

* update

* update

* fixed bug

* update
